# Agentic_AI

./: .gitignore
Assignment-5/: README.md  assignment5.md  auto_test_a5.py  build_kg.py  query_system_multiagent.py  query_system_multiagent_template.py  requirements.txt  test_data_a5.json
Assignment-5/agents/: __init__.py  a5_template.py  answer.py  diagnosis.py  executor.py  explanation.py  nlu.py  pipeline.py  planner.py  repair.py  security.py  types.py
assignment1/: .env.example  main.py
assignment2/: agent.py  main.py  requirements.txt  tools.py
assignment3/: .env_example  .gitignore  README.md  build_rag.py  config.py  evaluator.py  experiment.py  generate_report.py  langgraph_agent.py  requirements.txt
assignment4/: .gitignore  Assignment-4.md  README.md  auto_test.py  build_kg.py  llm_loader.py  query_system.py  requirements.txt  setup_data.py  test_data.json
assignment4/docs/: export_kg_viz.py
lab1/: easy_ncu_scraper.py  hard_allrecipes_scraper.py  medium_nstc_scraper.py  ncu_news.csv  nstc_awards.csv  recipes.json
lab4/: browser-use-assignment-plan.md
lab4/browser-use-assignment/: README.md  report.md
lab4/browser-use-assignment/screenshots/: action_log.json  timings.json  (+1 more)
lab5/stock_crew/: agents.py  generate_report.py  improved.py  main.py  original.py  pyproject.toml  tools.py
lab5/stock_crew/outputs/: improved_2330_TW_20260409_150840.md  improved_2330_TW_20260409_151155.md  improved_NVDA_20260409_150725.md  improved_NVDA_20260409_151046.md  original_2330_TW_20260409_151246.md  original_NVDA_20260409_150533.md
lab6/: capture_neo4j.py
(+1 files in other folders)
